--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   firebase_auth: ^1.0.0
   # firebase_core
   #firebase_core: ^1.10.0
+  fluttertoast: ^8.0.8
   #cloud_firestore
   cloud_firestore: ^1.0.0
   #splash_screen
